// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`write_measures (Snapshot) writes a transposing staff 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        <defaultConcertClef>G8vb</defaultConcertClef>
        <defaultTransposingClef>G</defaultTransposingClef>
        </Staff>
      <trackName>Tenor Saxophone</trackName>
      <Instrument id="tenor-saxophone">
        <longName>Tenor Saxophone</longName>
        <shortName>T. Sax.</shortName>
        <trackName>Tenor Saxophone</trackName>
        <minPitchP>44</minPitchP>
        <maxPitchP>87</maxPitchP>
        <minPitchA>44</minPitchA>
        <maxPitchA>75</maxPitchA>
        <transposeDiatonic>-8</transposeDiatonic>
        <transposeChromatic>-14</transposeChromatic>
        <instrumentId>wind.reed.saxophone.tenor</instrumentId>
        <concertClef>G8vb</concertClef>
        <transposingClef>G</transposingClef>
        <Channel>
          <program value="66"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig>
            <concertKey>-3</concertKey>
            <actualKey>-1</actualKey>
            </KeySig>
          <TimeSig>
            <sigN>4</sigN>
            <sigD>4</sigD>
            </TimeSig>
          <Tempo>
            <tempo>2.666667</tempo>
            <followText>1</followText>
            <text><sym>metNoteQuarterUp</sym> = 160</text>
            </Tempo>
          
          <Chord><durationType>whole</durationType><Note><pitch>55</pitch><tpc>15</tpc><tpc2>17</tpc2></Note></Chord></voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      <Measure>
        <voice>
          <Rest>
            <durationType>measure</durationType>
            </Rest>
          </voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>"
`;

exports[`write_measures (Snapshot) writes tuplets 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig>
            <concertKey>-3</concertKey>
            </KeySig>
          <TimeSig>
            <sigN>4</sigN>
            <sigD>4</sigD>
            </TimeSig>
          <Tempo>
            <tempo>2.666667</tempo>
            <followText>1</followText>
            <text><sym>metNoteQuarterUp</sym> = 160</text>
            </Tempo>
          
          <Tuplet><normalNotes>2</normalNotes><actualNotes>3</actualNotes></Tuplet><Chord><durationType>eighth</durationType><Note><pitch>72</pitch><tpc>14</tpc></Note></Chord><Chord><durationType>eighth</durationType><Note><pitch>74</pitch><tpc>16</tpc></Note></Chord><Chord><durationType>eighth</durationType><Note><pitch>76</pitch><tpc>18</tpc></Note></Chord><endTuplet/><Rest><durationType>quarter</durationType></Rest><Rest><durationType>half</durationType></Rest></voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>"
`;

exports[`write_measures (Snapshot) writes ties 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig>
            <concertKey>-3</concertKey>
            </KeySig>
          <TimeSig>
            <sigN>4</sigN>
            <sigD>4</sigD>
            </TimeSig>
          <Tempo>
            <tempo>2.666667</tempo>
            <followText>1</followText>
            <text><sym>metNoteQuarterUp</sym> = 160</text>
            </Tempo>
          
          <Chord><durationType>half</durationType><Note><pitch>67</pitch><tpc>15</tpc></Note></Chord><Chord><durationType>half</durationType><Note><Spanner type="Tie"><Tie/><next><location><measures>1</measures><fractions>-1/2</fractions></location></next></Spanner><pitch>69</pitch><tpc>17</tpc></Note></Chord></voice>
        </Measure>
      <Measure>
        <voice>
          
          <Chord><durationType>half</durationType><Note><Spanner type="Tie"><Tie/><next><location><fractions>1/2</fractions></location></next></Spanner><Spanner type="Tie"><prev><location><measures>-1</measures><fractions>1/2</fractions></location></prev></Spanner><pitch>69</pitch><tpc>17</tpc></Note></Chord><Chord><durationType>half</durationType><Note><Spanner type="Tie"><prev><location><fractions>-1/2</fractions></location></prev></Spanner><pitch>69</pitch><tpc>17</tpc></Note></Chord></voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>"
`;

exports[`write_measures (Snapshot) writes chord symbol XML 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig>
            <concertKey>-3</concertKey>
            </KeySig>
          <TimeSig>
            <sigN>4</sigN>
            <sigD>4</sigD>
            </TimeSig>
          <Tempo>
            <tempo>2.666667</tempo>
            <followText>1</followText>
            <text><sym>metNoteQuarterUp</sym> = 160</text>
            </Tempo>
          
          <Harmony><root>11</root><name>^7</name></Harmony><Chord><durationType>half</durationType><Note><pitch>60</pitch><tpc>14</tpc></Note></Chord><Harmony><root>17</root><name>-7</name></Harmony><Chord><durationType>half</durationType><Note><pitch>62</pitch><tpc>16</tpc></Note></Chord></voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>"
`;

exports[`write_measures (Snapshot) writes annotation XML 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        <defaultConcertClef>G8vb</defaultConcertClef>
        <defaultTransposingClef>G</defaultTransposingClef>
        </Staff>
      <trackName>Tenor Saxophone</trackName>
      <Instrument id="tenor-saxophone">
        <longName>Tenor Saxophone</longName>
        <shortName>T. Sax.</shortName>
        <trackName>Tenor Saxophone</trackName>
        <minPitchP>44</minPitchP>
        <maxPitchP>87</maxPitchP>
        <minPitchA>44</minPitchA>
        <maxPitchA>75</maxPitchA>
        <transposeDiatonic>-8</transposeDiatonic>
        <transposeChromatic>-14</transposeChromatic>
        <instrumentId>wind.reed.saxophone.tenor</instrumentId>
        <concertClef>G8vb</concertClef>
        <transposingClef>G</transposingClef>
        <Channel>
          <program value="66"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig>
            <concertKey>-3</concertKey>
            <actualKey>-1</actualKey>
            </KeySig>
          <TimeSig>
            <sigN>4</sigN>
            <sigD>4</sigD>
            </TimeSig>
          <Tempo>
            <tempo>2.666667</tempo>
            <followText>1</followText>
            <text><sym>metNoteQuarterUp</sym> = 160</text>
            </Tempo>
          
          <Chord><durationType>quarter</durationType><Articulation><subtype>articStaccatoAbove</subtype></Articulation><Note><pitch>58</pitch><tpc>12</tpc><tpc2>14</tpc2></Note></Chord><Chord><durationType>quarter</durationType><Articulation><subtype>articAccentAbove</subtype></Articulation><Note><pitch>60</pitch><tpc>14</tpc><tpc2>16</tpc2></Note></Chord><Chord><durationType>quarter</durationType><Ornament><subtype>ornamentShortTrill</subtype></Ornament><Note><pitch>62</pitch><tpc>16</tpc><tpc2>18</tpc2></Note></Chord><Chord><durationType>quarter</durationType><Note><pitch>63</pitch><tpc>11</tpc><tpc2>13</tpc2><ChordLine><subtype>4</subtype></ChordLine></Note></Chord></voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>"
`;

exports[`write_measures (Snapshot) writes glissando XML 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<museScore version="4.50">
  <Score>
    <Division>480</Division>
    <metaTag name="arranger"/>
    <metaTag name="audioComUrl"/>
    <metaTag name="composer">Test Composer</metaTag>
    <metaTag name="copyright"/>
    <metaTag name="lyricist"/>
    <metaTag name="movementNumber"/>
    <metaTag name="movementTitle"/>
    <metaTag name="platform"/>
    <metaTag name="poet"/>
    <metaTag name="source"/>
    <metaTag name="sourceRevisionId"/>
    <metaTag name="subtitle"/>
    <metaTag name="translator"/>
    <metaTag name="workNumber"/>
    <metaTag name="workTitle">Test Tune</metaTag>
    <Part id="1">
      <Staff id="1">
        <StaffType group="pitched">
          <name>stdNormal</name>
          </StaffType>
        </Staff>
      <trackName>Piano</trackName>
      <Instrument id="piano">
        <longName>Piano</longName>
        <shortName>Pno.</shortName>
        <trackName>Piano</trackName>
        <minPitchP>21</minPitchP>
        <maxPitchP>108</maxPitchP>
        <minPitchA>21</minPitchA>
        <maxPitchA>108</maxPitchA>
        <instrumentId>keyboard.piano</instrumentId>
        <Channel>
          <program value="0"/>
          <synti>Fluid</synti>
          </Channel>
        </Instrument>
      </Part>
    <Staff id="1">
      <VBox>
        <height>10</height>
        <Text>
          <style>title</style>
          <text>Test Tune</text>
          </Text>
        <Text>
          <style>composer</style>
          <text>Test Composer</text>
          </Text>
        </VBox>
      <Measure>
        <voice>
          <KeySig>
            <concertKey>-3</concertKey>
            </KeySig>
          <TimeSig>
            <sigN>4</sigN>
            <sigD>4</sigD>
            </TimeSig>
          <Tempo>
            <tempo>2.666667</tempo>
            <followText>1</followText>
            <text><sym>metNoteQuarterUp</sym> = 160</text>
            </Tempo>
          
          <Chord><durationType>quarter</durationType><Note><Spanner type="Glissando"><Glissando><subtype>1</subtype><diagonal>1</diagonal></Glissando><next><location><fractions>1/4</fractions></location></next></Spanner><pitch>72</pitch><tpc>14</tpc></Note></Chord><Chord><durationType>quarter</durationType><Note><Spanner type="Glissando"><prev><location><fractions>-1/4</fractions></location></prev></Spanner><pitch>74</pitch><tpc>16</tpc></Note></Chord><Chord><durationType>quarter</durationType><Note><pitch>76</pitch><tpc>18</tpc></Note></Chord><Chord><durationType>quarter</durationType><Note><pitch>77</pitch><tpc>13</tpc></Note></Chord></voice>
        </Measure>
      </Staff>
    </Score>
  </museScore>"
`;
